--- a/style.css
+++ b/style.css
@@ -1,1 +1,32 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
 
+main {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+#scores {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 10px;
+    padding: 10px;
+    border: 2px dotted red;
+}
+
+#your-score {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px dotted blue;
+    
+}
+
+.record {
+    display: flex;
+    flex-direction: row;
+    border: 2px dotted green;
+}
