--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@ main {
     margin: 10px;
     padding: 10px;
     border: 2px dotted red;
+    max-width: 1000px;
 }
 
-#your-score {
+#your-score, #computer-score {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,5 +29,37 @@ main {
 .record {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
     border: 2px dotted green;
+    width: 90%;
+}
+
+.wins {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.loses {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.ties {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#rounds-remaining {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px dotted blue;
+}
+
+#your-score, #computer-score, #rounds-remaining {
+    width: 33%;
 }
