--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ main {
     display: flex;
     flex-direction: column;
     width: 100%;
+    max-width: 1000px;
 }
 
 #scores {
@@ -14,16 +15,15 @@ main {
     justify-content: space-between;
     margin: 10px;
     padding: 10px;
-    border: 2px dotted red;
-    max-width: 1000px;
+    border: 2px dotted red; 
 }
 
-#your-score, #computer-score {
+#your-score, #computer-score, #rounds-remaining, #your-img, #computer-img, #choices {
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 2px dotted blue;
-    
+    width: 33%;
 }
 
 .record {
@@ -41,7 +41,7 @@ main {
     align-items: center;
 }
 
-.loses {
+.losses {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -53,13 +53,24 @@ main {
     align-items: center;
 }
 
-#rounds-remaining {
+#faceoff {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 2px dotted blue;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 10px;
+    padding: 10px;
+    border: 2px dotted red;  
 }
 
-#your-score, #computer-score, #rounds-remaining {
-    width: 33%;
+#choices {
+    justify-content: space-evenly;
+}
+
+#button-group {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 2px dotted green;
+    height: 66%;
 }
